# solana-mobile

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  android.build.sh  android.bundle.sh  android.env  android.update.sh  original_main.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: android-build.yml
assets/: main.css
scripts/: android.build.sh  android.bundle.sh  android.env  android.update.sh  build_openssl_android.sh  build_openssl_android_ci.sh  build_openssl_android_local.sh
src/: ffi.rs  log  log2  main.rs  mwa.rs
src/components/: wallet_view.rs
src/signing/: mod.rs
