[package]
name = "mobile"
version = "0.1.0"
authors = ["bigti"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.7.0-alpha.0", features = ["router"] }
dioxus = { path = "../dioxus/packages/dioxus", features = ["router"] }
jni = "0.21.1"
android_logger = "0.13"
log = "0.4"
once_cell = "1.21.3"
async-channel = "2.3.1"
solana-sdk = "2.3.1"
bs58 = "0.5.1"
bincode = "1.3"
anyhow = "1.0.98"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
