[package]
name = "mobile"
version = "0.1.0"
authors = ["bigti"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/regolith-labs/dioxus", branch = "main", features = ["router"] }
jni = "0.21.1"
android_logger = "0.13"
log = "0.4"
once_cell = "1.21.3"
async-channel = "2.3.1"
solana-sdk = "2.3.1"
bs58 = "0.5.1"
bincode = "1.3"
anyhow = "1.0.98"
solana-client = "2.3.2"
tokio = { version = "1.45.1", features = ["time"] }
uuid = { version = "1.0", features = ["v4"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
solana-stake-interface = { version = "1.2.0", features = ["bincode"] }
solana-account-decoder = "2.2"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
lazy_static = "1.5.0"
qrcode = "0.14"
image = { version = "0.24", default-features = false }
chrono = "0.4"
hex = "0.4"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
